# dank-face-slack-bot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build-and-release.yaml  test.yaml
dank_face_slack_bot/: main.py  models.py
tests/: mock_web_api_server.py  test_slash_command.py
