[tool.poetry]
name = "dank-face-slack-bot"
version = "0.1.0"
description = ""
authors = ["Julen Dixneuf <julend@padok.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "==0.94.0"
uvicorn = "==0.21.0"
slack-bolt = "^1.16.2"
httpx = "^0.23.3"
path-py = "^12.5.0"
ruff = "^0.0.254"

[tool.poetry.group.dev.dependencies]
pytest = "==7.2.2"
black = "==23.1.0"
isort = "==5.12.0"
pre-commit = "==3.1.1"
pytest-cov = "==4.0.0"
pytest-mock = "==3.10.0"
mypy = "==1.1.1"
httpx = "==0.23.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://www.python.org/dev/peps/pep-0518/
[tool.isort]
profile = "black"

# Fix deprecation warning
# https://github.com/pytest-dev/pytest-asyncio/blob/d8efa640f0aa1ba8856b908ba486150588018209/pytest_asyncio/plugin.py#L61
[tool.pytest.ini_options]
asyncio_mode = "auto"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
plugins = "pydantic.mypy"
exclude = "tests"

follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
